cryptojs and file chunk upload

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 <!-- Enable bootstrap 4 theme -->
 <script>window.__theme = 'bs4';</script>
 
+<!--<script src="node_modules/crypto-js/crypto-js.js"></script>-->
+
 <app-root>Loading...</app-root>
 </body>
 </html>
